# AI-Kubernetes-Upgrade-Advisor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  k8s_upgrade_assess.py  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
deploy/helm/k8s-upgrade-advisor/: Chart.yaml  values.yaml
deploy/helm/k8s-upgrade-advisor/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  pdb.yaml  prometheusrule.yaml  pvc.yaml  service.yaml  servicemonitor.yaml
docs/: api.md  architecture.md  deployment.md  development.md  operations.md  output.txt  rag.md
docs/adr/: 0001-deterministic-first-llm-second.md  0002-structured-llm-output.md  0003-hybrid-retrieval-hard-version-filter.md  0004-pluggable-embeddings-graceful-degradation.md
examples/: eks-1.26-to-1.29.html  eks-1.26-to-1.29.md
frontend/: index.html
k8s_assess/: __init__.py  cluster_profile.py  collector.py  knowledge_base.py  reporter.py  retriever.py
reports/: k8s_upgrade_134_to_135_20260606_105032.html  k8s_upgrade_134_to_135_20260606_105032.md  k8s_upgrade_134_to_135_20260606_110219.html  k8s_upgrade_134_to_135_20260606_110219.md
src/k8s_upgrade_advisor/: __init__.py  cli.py  config.py  errors.py  resilience.py  service.py
src/k8s_upgrade_advisor/analysis/: __init__.py  api_lifecycle.py  compatibility.py  components.py  crds.py  helm_compat.py  pipeline.py  planner.py  profile.py  risk.py  skew.py  webhooks.py
src/k8s_upgrade_advisor/api/: app.py  schemas.py
src/k8s_upgrade_advisor/collectors/: __init__.py  cluster.py  snapshot.py
src/k8s_upgrade_advisor/knowledge/: __init__.py  chunker.py  embeddings.py  fetcher.py  sources.py  store.py
src/k8s_upgrade_advisor/llm/: __init__.py  advisor.py  prompts.py  provider.py
src/k8s_upgrade_advisor/models/: __init__.py  assessment.py  cluster.py  versions.py
src/k8s_upgrade_advisor/observability/: __init__.py  logging.py  metrics.py  tracing.py
src/k8s_upgrade_advisor/reporting/: __init__.py  html.py  markdown.py
src/k8s_upgrade_advisor/retrieval/: __init__.py  bm25.py  rerank.py  retriever.py
tests/: conftest.py  test_ai_quality.py  test_api.py  test_api_lifecycle.py  test_cli.py  test_components_compat.py  test_hardening.py  test_k8s_domain.py  test_llm_merge.py  test_profile.py  test_reporting.py  test_resilience_store.py  test_retrieval.py  test_review_fixes.py  test_skew_risk.py  test_sre.py  test_versions.py
tests/fixtures/: eks_1_26.json
